--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,8 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  <<: *default
+  database: db/dev.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
