--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
+    - name: Build sqlite
+      run: |
+        apt-get install libsqlite3-dev
     - name: Build and test with Rake
       run: |
         gem install bundler
