--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,8 +18,7 @@ jobs:
       with:
         ruby-version: 2.6.x
     - name: Build sqlite
-      run: |
-        apt-get install libsqlite3-dev
+      run: sudo apt-get install libsqlite3-dev
     - name: Build and test with Rake
       run: |
         gem install bundler
